--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,57 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+    font-family: "Public Sans", sans-serif;
+}
+
+.text-preset-1 {
+    font-size: 32px;
+    line-height: 120%;
+    letter-spacing: 0px;
+    font-weight: bold;
+}
+
+.text-preset-2 {
+    font-size: 20px;
+    line-height: 120%;
+    letter-spacing: 0px;
+    font-weight: bold;
+}
+
+.text-preset-3 {
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0px;
+    font-weight: bold;
+}
+
+.text-preset-4 {
+    font-size: 14px;
+    line-height: 150%;
+    letter-spacing: 0px;
+}
+
+.text-preset-4-bold {
+    font-size: 14px;
+    line-height: 150%;
+    letter-spacing: 0px;
+    font-weight: bold;
+}
+
+.text-preset-5 {
+    font-size: 12px;
+    line-height: 150%;
+    letter-spacing: 0px;
+}
+
+.text-preset-5-bold {
+    font-size: 12px;
+    line-height: 150%;
+    letter-spacing: 0px;
+    font-weight: bold;
+}
+
+
