--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,40 +1,41 @@
-<nav class="w-[300px] h-full flex flex-col grow gap-6 bg-ds-grey-900 rounded-r-[12px] text-white">
-    <div class="w-full my-10 ml-8">
+<nav class="md:w-[300px] md:h-full md:relative flex md:flex-col w-full h-[74px] fixed bottom-0 bg-ds-grey-900 flex-row rounded-t-lg md:rounded-r-[12px] md:rounded-tl-none md:gap-6">
+    <div class="w-full my-10 ml-8 hidden md:block">
         <img src="/images/logo-large.svg" alt="Logo"/>
     </div>
-    <div class="flex flex-col grow">
+    <div class="flex md:gap-0 md:flex-col grow justify-around md:justify-start items-end md:items-start">
         <a routerLink="/">
-            <div class="flex w-[276px] h-14 items-center gap-4 pl-8 rounded-r-[12px] bg-ds-beige-100 text-preset-3 text-ds-grey-900 border-l-4 border-ds-green">
+            <app-nav-element>
                 <img src="/images/icon-nav-overview.svg" alt="icon-overview" />
                 <span>Overview</span>
-            </div>
+            </app-nav-element>
         </a>
         <a routerLink="/transactions">
-            <div class="flex w-[276px] h-14 items-center gap-4 pl-8 text-ds-grey-300 hover:text-ds-grey-100 transition-all duration-300">
+            <app-nav-element>
                 <img src="/images/icon-nav-transactions.svg" alt="icon-transactions" />
                 <span>Transactions</span>
-            </div>
+            </app-nav-element>
         </a>
         <a routerLink="/budgets">
-            <div class="flex w-[276px] h-14 items-center gap-4 pl-8 text-ds-grey-300 hover:text-ds-grey-100 transition-all duration-300">
+            <app-nav-element>
                 <img src="/images/icon-nav-budgets.svg" alt="icon-budgets" />
                 <span>Budgets</span>
-            </div>
+            </app-nav-element>
         </a>
         <a routerLink="/pots">
-            <div class="flex w-[276px] h-14 items-center gap-4 pl-8 text-ds-grey-300 hover:text-ds-grey-100 transition-all duration-300">
+            <app-nav-element>
                 <img src="/images/icon-nav-pots.svg" alt="icon-pots" />
                 <span>Pots</span>
-            </div>
+            </app-nav-element>
         </a>
         <a routerLink="/recurring-bills">
-            <div class="flex w-[276px] h-14 items-center gap-4 pl-8 text-ds-grey-300 hover:text-ds-grey-100 transition-all duration-300">
+            <app-nav-element>
                 <img src="/images/icon-nav-recurring-bills.svg" alt="icon-recurring-bills" />
                 <span>Recurring Bills</span>
-            </div>
+            </app-nav-element>
         </a>
     </div>
-    <div class="flex items-center pt-4 pl-8 mb-[58px] gap-4 text-ds-grey-300 hover:text-ds-grey-100 hover:cursor-pointer transition-all duration-300">
+
+    <div class="hidden md:flex items-center pt-4 pl-8 mb-[58px] gap-4 text-ds-grey-300 hover:text-ds-grey-100 hover:cursor-pointer transition-all duration-300">
         <img src="/images/icon-minimize-menu.svg" alt="minimize-icon" />
         <span>Minimize Menu</span>
     </div>
