finished Overview and Pots Page

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -11,7 +11,7 @@
         }
     </div>
 
-    <div class="flex gap-0 md:flex-col grow w-full justify-around md:justify-start items-end md:items-start">
+    <div class="flex gap-0 md:flex-col grow w-full max-h-[750px] justify-around md:justify-start items-end md:items-start">
         <a routerLink="/" [ngClass]="isMinimised === true ? 'md:pr-6' : 'md:pr-2'">
             <app-nav-element>
                 <img src="/images/icon-nav-overview.svg" alt="icon-overview" />
