--- a/src/app/pots/pots.component.html
+++ b/src/app/pots/pots.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="flex flex-wrap gap-6">
-        @for (pot of pots; track pots.name) {
+        @for (pot of pots; track pots.name; ) {
             <div class="flex flex-col flex-wrap w-[calc(50%-12px)] rounded-xl bg-white p-6 gap-8">
                 <div class="flex justify-between items-center">
                     <div class="flex gap-4 items-center">
