--- a/src/app/transactions/transactions.component.html
+++ b/src/app/transactions/transactions.component.html
@@ -1,1 +1,88 @@
-<p>transactions works!</p>
+<section class="flex flex-col gap-8">
+    
+    <h1 class="text-preset-1 text-ds-grey-900">Transactions</h1>
+
+    <div class="flex flex-col gap-6 rounded-xl bg-white p-8">
+
+        <div class="flex w-full justify-between">
+            <input type="search" placeholder="Search transaction" class="border border-ds-beige-500 w-[320px] flex items-center rounded-lg py-3 pl-5"/>
+            <div class="flex gap-6">
+                <div class="flex gap-2 items-center">
+                    <p class="text-preset-4 text-ds-grey-500">Sort by</p>
+                    <select class="border rounded-lg py-3 px-5 border-ds-beige-500 w">
+                        <option>Latest</option>
+                    </select>
+                </div>
+                <div class="flex gap-2 items-center">
+                    <p class="text-preset-4 text-ds-grey-500">Category</p>
+                    <select class="border rounded-lg py-3 px-5 border-ds-beige-500">
+                        <option>All Transactions</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <div class="flex justify-between py-3 px-4 gap-8">
+                <p class="text-preset-5 text-ds-grey-500 w-1/2">Recipient / Sender</p>
+                <div class="flex w-1/4">
+                    <p class="text-preset-5 text-ds-grey-500 w-1/2">Category</p>
+                    <p class="text-preset-5 text-ds-grey-500 w-1/2">Transaction Date</p>
+                </div>
+                <p class="text-preset-5 text-ds-grey-500 w-1/4 flex justify-end">Amount</p>
+            </div>
+
+            <div class="flex flex-col gap-4">
+                @for (transaction of transactions.slice(pageination[0],pageination[1]); track transaction.name) {
+                    <div class="w-full h-[1px] bg-[#696868] opacity-15"></div>
+                    <div class="flex justify-between items-center px-4">
+                        <div class="flex items-center gap-4 w-1/2">
+                            <img src="{{ transaction.avatar }}" alt="{{ transaction.name }}" class="rounded-full w-10 h-10"/>
+                            <p class="text-preset-4-bold text-ds-grey-900">{{ transaction.name }}n</p>
+                        </div>
+                        
+                        <div class="w-1/4 flex">
+                            <p class="text-preset-5 text-ds-grey-500 w-1/2">{{ transaction.category }}</p>
+                            <p class="text-preset-5 text-ds-grey-500 w-1/2">{{ transaction.date | date }}</p>
+                        </div>
+                        
+                        <p 
+                            class="text-preset-4-bold w-1/4 flex justify-end"
+                            [ngClass]="transaction.amount > 0 ? 'text-ds-green' : 'text-ds-grey-900'"
+                        >
+                            {{ transaction.amount | currency }}
+                        </p>
+                    </div>
+                } 
+            </div>
+        </div>
+
+        <div class="flex justify-between pt-6">
+            <button 
+                class="flex py-3 px-4 border items-center rounded-lg gap-4 group hover:bg-ds-beige-500"
+                (click)="pageinationBack()"
+            >
+                <img src="/images/icon-caret-left.svg" alt="caret-left" />
+                <p class="text-preset-4 text-ds-grey-900 group-hover:text-white">Prev</p>
+            </button>
+            <div class="flex gap-2">
+                <button
+                    *ngFor="let page of pages" 
+                    class="rounded-lg w-10 h-10 flex justify-center items-center border "
+                    [ngClass]="page * 10 === pageination[0] ? 'text-white bg-ds-grey-900' : 'hover:bg-ds-beige-500 hover:text-white'"
+                    (click)="pageinationButton(page*10, page*10+10)"
+                >
+                    {{ page + 1 }}
+                </button>
+            </div>
+            <button 
+                class="flex py-3 px-4 border items-center rounded-lg gap-4 group hover:bg-ds-beige-500"
+                (click)="pageinationNext()"
+            >
+                <img src="/images/icon-caret-right.svg" alt="caret-right" />
+                <p class="text-preset-4 text-ds-grey-900 group-hover:text-white">Next</p>
+            </button>
+        </div>
+
+    </div>
+</section>
