--- a/src/app/budgets/budgets.component.html
+++ b/src/app/budgets/budgets.component.html
@@ -1,1 +1,86 @@
-<p>budgets works!</p>
+<section class="flex flex-col gap-8">
+    
+    <div class="flex justify-between w-full">
+        <h1 class="text-preset-1 text-ds-grey-900">Budgets</h1>
+        <button class="bg-ds-grey-900 rounded-lg text-preset-4-bold text-white p-4">+ Add New Budget</button>
+    </div>
+    
+
+    <div class="flex gap-6">
+        
+        <div class="w-2/5 rounded-xl bg-white p-8">left</div>
+        
+        <div class="w-3/5 flex flex-col gap-6">
+            
+            @for (budget of budgets ; track budget.category ) {
+
+            
+                <div class="flex flex-col gap-5 rounded-xl bg-white p-8">
+                    
+                    <div class="flex gap-4 items-center">
+                        <div class="w-4 h-4 rounded-full bg-[{{ budget.theme }}]"></div>
+                        <h2 class="text-preset-2 text-ds-grey-900">{{ budget.category }}</h2>
+                    </div>
+
+                    <div class="flex flex-col gap-4">
+                        <p class="text-preset-4 text-ds-grey-500">Maximum of {{ budget.maximum | currency }}</p>
+
+                        <div class="relative mb-6">
+                            <div class="absolute w-full h-6 top-0 left-0 bg-ds-beige-100 rounded z-10"></div>
+                            <div class="absolute w-1/4 h-6 top-0 left-0 bg-[{{ budget.theme }}] rounded z-20"></div>
+                        </div>
+
+                        <div class="flex gap-4">
+                            <div class="flex gap-4 grow">
+                                <div class="w-1 h-11 bg-[{{ budget.theme }}] rounded-lg"></div>
+                                <div class="flex flex-col justify-between">
+                                    <p class="text-preset-5 text-ds-grey-500">Spent</p>
+                                    <p class="text-preset-4-bold text-ds-grey-900">{{ getTotalSpent(budget.category) | currency}}</p>
+                                </div>
+                            </div>
+
+                            <div class="flex gap-4 grow">
+                                <div class="w-1 h-11 bg-ds-beige-100 rounded-lg"></div>
+                                <div class="flex flex-col justify-between">
+                                    <p class="text-preset-5 text-ds-grey-500">Remaining</p>
+                                    <p class="text-preset-4-bold text-ds-grey-900">{{ getRemaining(budget.category, budget.maximum) | currency}}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flex flex-col rounded-xl bg-ds-beige-100 p-5 gap-5">
+
+                        <div class="flex justify-between">
+                            <p class="text-preset-3 text-ds-beige-900">Latest Spending</p>
+                            <a href="/transactions" >
+                            <div class="flex items-center gap-3">
+                                    <p class="text-preset-4 text-ds-grey-500 hover:text-ds-grey-900">See All</p>
+                                    <img src="/images/icon-caret-right.svg" alt="icon-caret-right" />
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="flex flex-col gap-3">
+                        @for (transaction of getTransactions(budget.category) ; track transaction.name; let first = $first) {
+                            @if (first !== true){
+                                <div class="w-full h-[1px] bg-[#696868] opacity-15"></div>
+                            }
+                            <div class="flex justify-between">
+                                <div class="flex items-center gap-4">
+                                    <img src="{{ transaction.avatar }}" alt="{{ transaction.name }}" class="w-8 h-8 rounded-full"/>
+                                    <p class="text-preset-5-bold text-ds-grey-900">{{ transaction.name }}</p>
+                                </div>
+                                <div class="flex flex-col justify-between items-end">
+                                    <p class="text-preset-5-bold text-ds-grey-900">{{ transaction.amount | currency }}</p>
+                                    <p class="text-preset-5 text-ds-grey-500">{{ transaction.date | date }}</p>
+                                </div>
+                            </div>
+                        }
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</section>
