--- a/src/app/pots/pots.component.html
+++ b/src/app/pots/pots.component.html
@@ -2,7 +2,7 @@
     <div class="flex justify-between">
         <h1 class="text-preset-1">Pots</h1>
 
-        <button class="bg-ds-grey-900 text-white p-4 rounded-lg hover:bg-ds-grey-500">
+        <button class="bg-ds-grey-900 text-preset-4-bold text-white p-4 rounded-lg hover:bg-ds-grey-500">
             + Add New Pot
         </button>
     </div>
@@ -15,7 +15,7 @@
                         <div class="w-4 h-4 rounded-full bg-[{{ pot.theme }}]"></div>
                         <h2 class="text-preset-2 text-ds-grey-900">{{ pot.name }}</h2>
                     </div>
-                    <img src="/images/icon-ellipsis.svg" alt="ellipsis-icon"/>
+                    <img src="/images/icon-ellipsis.svg" alt="ellipsis-icon" class="hover:cursor-pointer"/>
                 </div>
 
                 <div class="flex flex-col gap-4">
