--- a/src/app/pots/pots.component.html
+++ b/src/app/pots/pots.component.html
@@ -2,7 +2,7 @@
     <div class="flex justify-between">
         <h1 class="text-preset-1">Pots</h1>
 
-        <button class="bg-ds-grey-900 text-preset-4-bold text-white p-4 rounded-lg hover:bg-ds-grey-500">
+        <button class="bg-ds-grey-900 text-preset-4-bold text-white p-4 rounded-lg hover:bg-ds-grey-500 transition-all duration-300">
             + Add New Pot
         </button>
     </div>
@@ -34,10 +34,10 @@
                 </div>
 
                 <div class="flex gap-4">
-                    <button class="bg-ds-beige-100 text-preset-4-bold rounded-lg flex justify-center items-center py-4 px-[70px] grow border border-transparent hover:bg-white hover:border hover:border-ds-beige-500">
+                    <button class="bg-ds-beige-100 text-preset-4-bold rounded-lg flex justify-center items-center py-4 px-[70px] grow border border-transparent hover:bg-white hover:border hover:border-ds-beige-500 transition-all duration-500">
                         + Add Money
                     </button>
-                    <button class="bg-ds-beige-100 text-preset-4-bold rounded-lg flex justify-center items-center py-4 px-[70px] grow border border-transparent hover:bg-white hover:border hover:border-ds-beige-500">
+                    <button class="bg-ds-beige-100 text-preset-4-bold rounded-lg flex justify-center items-center py-4 px-[70px] grow border border-transparent hover:bg-white hover:border hover:border-ds-beige-500 transition-all duration-500">
                         Withdraw
                     </button>
                 </div>
