added some links in overview page and made the search in transaction work

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <nav 
-    class="md:h-full md:relative flex md:flex-col w-screen h-[74px] fixed bottom-0 bg-ds-grey-900 flex-row rounded-t-lg md:rounded-r-[12px] md:rounded-tl-none md:gap-6"
+    class="md:h-full md:relative flex md:flex-col w-screen h-[74px] fixed bottom-0 bg-ds-grey-900 flex-row rounded-t-lg md:rounded-r-[12px] md:rounded-tl-none md:gap-6 z-50"
     [ngClass]="isMinimised == true ? 'md:w-[300px]' : 'md:w-[88px]'"
 >
 
