--- a/src/app/overview/overview-pots/overview-pots.component.html
+++ b/src/app/overview/overview-pots/overview-pots.component.html
@@ -2,8 +2,10 @@
     <div class="flex justify-between gap-8">
         <h2 class="text-preset-2 text-ds-grey-900">Pots</h2>
         <div class="flex min-w-[100px] gap-4 items-center">
-            <p class="text-preset-4 text-ds-grey-500">See Details</p>
-            <img src="/images/icon-caret-right.svg" alt="icon-caret-right" class="p-2" />
+            <a routerLink="/pots" class="w-full flex items-center gap-4 group">
+                <p class="text-preset-4 text-ds-grey-500 group-hover:text-ds-grey-900">See Details</p>
+                <img src="/images/icon-caret-right.svg" alt="icon-caret-right" class="p-2" />
+            </a>
         </div>
     </div>
 
