--- a/src/app/transactions/transactions.component.html
+++ b/src/app/transactions/transactions.component.html
@@ -13,9 +13,17 @@
             <div class="flex gap-6">
                 <div class="flex gap-2 items-center">
                     <p class="text-preset-4 text-ds-grey-500">Sort by</p>
-                    <select class="border rounded-lg py-3 px-5 border-ds-beige-500 w">
-                        <option>Latest</option>
+                    <select class="border rounded-lg py-3 px-5 border-ds-beige-500"
+                        (click)="updateSortBy($event)"
+                    >
+                        <option value="latest">Latest</option>
+                        <option value="oldest">Oldest</option>
+                        <option value="a-to-z">A to Z</option>
+                        <option value="z-to-a">Z to A</option>
+                        <option value="highest">Highest</option>
+                        <option value="lowest">Lowest</option>
                     </select>
+                    <!-- {{ sortBy }} -->
                 </div>
                 <div class="flex gap-2 items-center">
                     <p class="text-preset-4 text-ds-grey-500">Category</p>
@@ -37,7 +45,7 @@
             </div>
 
             <div class="flex flex-col gap-4">
-                @for (transaction of filteredTransactionsBySearch().slice(pageination[0],pageination[1]); track transaction.name) {
+                @for (transaction of filteredTransactions().slice(pageination[0],pageination[1]); track transaction.name) {
                     <div class="w-full h-[1px] bg-[#696868] opacity-15"></div>
                     <div class="flex justify-between items-center px-4">
                         <div class="flex items-center gap-4 w-1/2">
@@ -63,9 +71,10 @@
 
         <div class="flex justify-between pt-6">
             <button 
-                class="flex py-3 px-4 border items-center rounded-lg gap-4 group hover:bg-ds-beige-500 transition-all duration-300"
+                class="flex py-3 px-4 border items-center rounded-lg gap-4 transition-all duration-300"
                 (click)="pageinationBack()"
                 [disabled]="pages.length > 1 ? false : true"
+                [ngClass]="pages.length > 1 ? 'group hover:bg-ds-beige-500' : null"
             >
                 <img src="/images/icon-caret-left.svg" alt="caret-left" />
                 <p class="text-preset-4 text-ds-grey-900 group-hover:text-white transition-all duration-300">Prev</p>
@@ -74,16 +83,17 @@
                 <button
                     *ngFor="let page of pages" 
                     class="rounded-lg w-10 h-10 flex justify-center items-center border transition-all duration-300"
-                    [ngClass]="page * 10 === pageination[0] ? 'text-white bg-ds-grey-900' : 'hover:bg-ds-beige-500 hover:text-white'"
+                    [ngClass]="page * 10 === pageination[0] ? 'text-white bg-ds-grey-900 hover:cursor-default' : 'hover:bg-ds-beige-500 hover:text-white hover:cursor-pointer'"
                     (click)="pageinationButton(page*10, page*10+10)"
                 >
                     {{ page + 1 }}
                 </button>
             </div>
             <button 
-                class="flex py-3 px-4 border items-center rounded-lg gap-4 group hover:bg-ds-beige-500 transition-all duration-300"
+                class="flex py-3 px-4 border items-center rounded-lg gap-4 transition-all duration-300"
                 (click)="pageinationNext()"
                 [disabled]="pages.length > 1 ? false : true"
+                [ngClass]="pages.length > 1 ? 'group hover:bg-ds-beige-500' : null"
             >
                 <img src="/images/icon-caret-right.svg" alt="caret-right" />
                 <p class="text-preset-4 text-ds-grey-900 group-hover:text-white transition-all duration-300">Next</p>
