overview page should be responsive ready now

--- a/src/app/overview/overview-recurring-bills/overview-recurring-bills.component.html
+++ b/src/app/overview/overview-recurring-bills/overview-recurring-bills.component.html
@@ -1,4 +1,4 @@
-<section class="flex flex-col bg-white p-8 rounded-xl gap-6">
+<section class="flex flex-col bg-white p-5 md:p-8 rounded-xl gap-6">
     <div class="flex justify-between gap-8">
         <h2 class="text-preset-2 text-ds-grey-900">Recurring Bills</h2>
         <div class="flex min-w-[100px] gap-4 items-center">
