--- a/src/app/overview/overview-budgets/overview-budgets.component.html
+++ b/src/app/overview/overview-budgets/overview-budgets.component.html
@@ -1,27 +1,25 @@
-<section class="flex flex-col bg-white p-8 rounded-xl gap-6">
+<section class="flex flex-col bg-white p-5 md:p-8 rounded-xl gap-6">
     <div class="flex justify-between gap-8">
         <h2 class="text-preset-2 text-ds-grey-900">Budgets</h2>
         <div class="min-w-[100px]">
-            <a routerLink="/budgets" class="w-full flex items-center gap-4 group">
+            <a routerLink="/budgets" class="w-full flex items-center gap-3 md:gap-4 group">
                 <p class="text-preset-4 text-ds-grey-500 group-hover:text-ds-grey-900">See Details</p>
                 <img src="/images/icon-caret-right.svg" alt="icon-caret-right" class="p-2" />
             </a>
         </div>
     </div>
-    <div class="flex">
+    <div class="flex flex-col md:flex-row gap-4 md:gap-0">
         <div class="grow flex justify-center items-center">
             <div class="w-[240px] h-[240px] rounded-full relative" style="background: conic-gradient(#277C78 5%, #82C9D7 5% 82%,#F2CDAC 82% 89%,#626070 89% 100%);" >
-                <div class="absolute w-[187px] h-[187px] rounded-full top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 z-10 opacity-25 bg-white">
-
-                </div>
+                <div class="absolute w-[187px] h-[187px] rounded-full top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 z-10 opacity-25 bg-white"></div>
                 <div class="absolute w-40 h-40 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 flex flex-col justify-center items-center bg-white rounded-full z-20">
                     <p class="text-preset-1 text-ds-grey-900">$338</p>
                     <p class="text-preset-5 text-ds-grey-500">of $975 limit</p>
                 </div>
             </div>
         </div>
-        <div class="flex flex-col gap-4 py-[41px]">
-            <div *ngFor="let budget of budgets.slice(0,4)" class="flex grow gap-4 ">
+        <div class="flex flex-wrap w-full md:flex-col gap-4 md:py-[41px] ">
+            <div *ngFor="let budget of budgets.slice(0,4)" class="flex grow-0 md:grow gap-4 w-[calc(50%-8px)]">
                 <div class="w-1 h-full rounded-lg bg-[{{ budget.theme }}]"></div>
                 <div class="flex flex-col gap-1">
                     <p class="text-preset-5 text-ds-grey-500">{{ budget.category }}</p>
