--- a/src/app/overview/overview-pots/overview-pots.component.html
+++ b/src/app/overview/overview-pots/overview-pots.component.html
@@ -1,16 +1,16 @@
-<section class="flex flex-col bg-white p-8 rounded-xl gap-6">
+<section class="flex flex-col bg-white p-5 md:p-8 rounded-xl gap-6">
     <div class="flex justify-between gap-8">
         <h2 class="text-preset-2 text-ds-grey-900">Pots</h2>
         <div class="flex min-w-[100px] gap-4 items-center">
-            <a routerLink="/pots" class="w-full flex items-center gap-4 group">
+            <a routerLink="/pots" class="w-full flex items-center justify-between gap-3 md:gap-4 group">
                 <p class="text-preset-4 text-ds-grey-500 group-hover:text-ds-grey-900">See Details</p>
                 <img src="/images/icon-caret-right.svg" alt="icon-caret-right" class="p-2" />
             </a>
         </div>
     </div>
 
-    <div class="flex">
-        <div class="flex w-1/2 h-[110px] bg-ds-grey-100 items-center gap-4 pl-4 mr-5 rounded-xl">
+    <div class="flex flex-col md:flex-row md:gap-0 gap-5">
+        <div class="flex w-full md:w-1/2 h-[110px] bg-ds-grey-100 items-center gap-4 pl-4 mr-5 rounded-xl">
             <img src="/images/icon-pot.svg" alt="pot-icon" />
             <div>
                 <p class="text-preset-4 text-ds-grey-500">Total Saved</p>
@@ -19,7 +19,7 @@
             
         </div>
 
-        <div class="grid gap-4 grid-cols-2 grid-rows-2 w-1/2 grid-flow-col">
+        <div class="grid gap-4 grid-cols-2 grid-rows-2 w-full md:w-1/2 grid-flow-col">
             
             <div *ngFor="let pot of pots.slice(0,4)" class="flex grow gap-4">
                 <div class="w-1 h-full rounded-lg {{ coolFunction(pot.theme) }} "></div>
