--- a/src/app/overview/overview-transactions/overview-transactions.component.html
+++ b/src/app/overview/overview-transactions/overview-transactions.component.html
@@ -1,8 +1,8 @@
-<section class="flex flex-col bg-white p-8 rounded-xl gap-6">
+<section class="flex flex-col bg-white p-5 md:p-8 rounded-xl gap-6">
     <div class="flex justify-between gap-8">
         <h2 class="text-preset-2 text-ds-grey-900">Transactions</h2>
-        <div class="flex min-w-[100px] gap-4 items-center">
-            <a routerLink="/budgets" class="w-full flex items-center gap-4 group">
+        <div class="flex min-w-[100px] gap-4 items-center justify-end">
+            <a routerLink="/transactions" class=" flex justify-between items-center gap-3 md:gap-4 group">
                 <p class="text-preset-4 text-ds-grey-500 group-hover:text-ds-grey-900">View All</p>
                 <img src="/images/icon-caret-right.svg" alt="icon-caret-right" class="p-2" />
             </a>
